KAFKA-2514; change default JVM options in kafka-run-class.sh. GC set to G1 collector.